bon/tests/integration/ui/compile_fail/misc.stderr
error: duplicate key in the map
 --> tests/integration/ui/compile_fail/misc.rs:6:9
  |
6 |         "Hello": "Blackjack",
  |         ^^^^^^^

error: duplicate key in the map
 --> tests/integration/ui/compile_fail/misc.rs:7:9
  |
7 |         "Hello": "Littlepip",
  |         ^^^^^^^

error: duplicate value in the set
  --> tests/integration/ui/compile_fail/misc.rs:10:43
   |
10 |     let set: BTreeSet<String> = bon::set!["mintals", "guns", "mintals", "roses"];
   |                                           ^^^^^^^^^

error: duplicate value in the set
  --> tests/integration/ui/compile_fail/misc.rs:10:62
   |
10 |     let set: BTreeSet<String> = bon::set!["mintals", "guns", "mintals", "roses"];
   |                                                              ^^^^^^^^^

error: Only structs with named fields are supported
  --> tests/integration/ui/compile_fail/misc.rs:26:1
   |
26 | struct TupleStruct(u32, u32);
   | ^^^^^^

error: use a simple `identifier: type` syntax for the function argument; destructuring patterns in arguments aren't supported by the `#[builder]`
  --> tests/integration/ui/compile_fail/misc.rs:29:18
   |
29 | fn destructuring((x, y): (u32, u32)) {
   |                  ^^^^^^

error: Unexpected type `bool`
  --> tests/integration/ui/compile_fail/misc.rs:35:44
   |
35 | fn unnecessary_into_false(#[builder(into = false)] _x: u32) {}
   |                                            ^^^^^

error: this `#[builder(into)]` attribute is redundant, because `into` is already implied for this member via the `#[builder(on(...))]` at the top of the function
  --> tests/integration/ui/compile_fail/misc.rs:38:31
   |
38 | fn unnecessary_into(#[builder(into)] _x: String) {}
   |                               ^^^^

error: This syntax is not supported in type patterns yet. If you have a use case for this, please open an issue at https://github.com/elastio/bon/issues.
  --> tests/integration/ui/compile_fail/misc.rs:40:15
   |
40 | #[builder(on(&dyn std::fmt::Debug, into))]
   |               ^^^

error: nested attributes are not allowed in the type pattern of #[builder(on(type_pattern, ...))]
  --> tests/integration/ui/compile_fail/misc.rs:43:17
   |
43 | #[builder(on(fn(#[attr] a: u32), into))]
   |                 ^

error: Expected an attribute of form `on(type_pattern, ...)`
  --> tests/integration/ui/compile_fail/misc.rs:46:11
   |
46 | #[builder(on)]
   |           ^^

error: unexpected end of input, expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
  --> tests/integration/ui/compile_fail/misc.rs:49:1
   |
49 | #[builder(on())]
   | ^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected `,`
  --> tests/integration/ui/compile_fail/misc.rs:52:1
   |
52 | #[builder(on(_))]
   | ^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: this #[builder(on(type_pattern, ...))] contains no options to override the default behavior for the selected setters like `into`, so it does nothing
  --> tests/integration/ui/compile_fail/misc.rs:55:1
   |
55 | #[builder(on(_,))]
   | ^^^^^^^^^^^^^^^^^^
   |
   = note: this error originates in the attribute macro `builder` (in Nightly builds, run with -Z macro-backtrace for more info)

error: expected at least one parameter in parentheses
  --> tests/integration/ui/compile_fail/misc.rs:58:11
   |
58 | #[builder(start_fn())]
   |           ^^^^^^^^

error: `skip` attribute can't be specified with other attributes like `into` because there will be no setter generated for this member to configure
  --> tests/integration/ui/compile_fail/misc.rs:63:21
   |
63 |     #[builder(skip, into)]
   |                     ^^^^

error: `skip` attribute can't be specified with other attributes like `name` because there will be no setter generated for this member to configure
  --> tests/integration/ui/compile_fail/misc.rs:69:28
   |
69 |     #[builder(skip, name = bar)]
   |                            ^^^

error: `skip` attribute can't be specified with other attributes like `default` because there will be no setter generated for this member to configure. If you wanted to specify a value for the member, then use the following syntax instead `#[builder(skip = value)]`
  --> tests/integration/ui/compile_fail/misc.rs:75:21
   |
75 |     #[builder(skip, default = 42)]
   |                     ^^^^^^^

error: `skip` attribute is not supported on function arguments. Use a local variable instead.
  --> tests/integration/ui/compile_fail/misc.rs:81:15
   |
81 |     #[builder(skip)] _x: u32,
   |               ^^^^

error: Only structs with named fields are supported
  --> tests/integration/ui/compile_fail/misc.rs:88:1
   |
88 | struct TupleStructsAreUnsupported(u32, u32);
   | ^^^^^^

error: The attribute is expected to be placed only on an `fn` item or a `struct` declaration
  --> tests/integration/ui/compile_fail/misc.rs:91:1
   |
91 | enum EnumsAreUnsupported {}
   | ^^^^

error: use a simple `identifier: type` syntax for the function argument; destructuring patterns in arguments aren't supported by the `#[builder]`
  --> tests/integration/ui/compile_fail/misc.rs:94:39
   |
94 | fn destructuring_in_fn_is_unsupported((_, _): (u32, u32)) {}
   |                                       ^^^^^^

error[E0599]: no method named `x` found for struct `SkipGeneratesNoSetterBuilder` in the current scope
  --> tests/integration/ui/compile_fail/misc.rs:21:38
   |
12 |     #[builder]
   |     ---------- method `x` not found for this struct
...
21 |     SkipGeneratesNoSetter::builder().x(42).build();
   |                                      ^ method not found in `SkipGeneratesNoSetterBuilder<()>`

error[E0599]: no method named `y` found for struct `SkipGeneratesNoSetterBuilder` in the current scope
  --> tests/integration/ui/compile_fail/misc.rs:22:38
   |
12 |     #[builder]
   |     ---------- method `y` not found for this struct
...
22 |     SkipGeneratesNoSetter::builder().y(42).build();
   |                                      ^ method not found in `SkipGeneratesNoSetterBuilder<()>`
